--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,10 +16,12 @@ composeBom = "2024.04.01"
 appcompat = "1.7.0"
 material = "1.12.0"
 materialVersion = "1.7.8"
+mockitoCore = "3.4.6"
 mockk = "1.13.10"
 navigationCompose = "2.8.9"
 navigationHiltCompose = "1.2.0"
 junitJunit = "4.12"
+turbine = "0.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,7 +54,10 @@ ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-client-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockitoKotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "4.1.0" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
